builds/2/log
Started by user unknown or anonymous
Running as SYSTEM
Building in workspace /var/lib/jenkins/workspace/python_bash_job
[python_bash_job] $ python /tmp/jenkins2143130599701586734.py
  File "/tmp/jenkins2143130599701586734.py", line 4
    os .system(`sudo mkdir /home/lenny/{} ; ls /home/lenny`.format(folder_new))
                         ^
SyntaxError: invalid syntax
Build step 'Execute Python script' marked build as failure
Finished: FAILURE
